FIX: timezones on mainpage, news items on mobile

--- a/css/eventbox.css
+++ b/css/eventbox.css
@@ -25,6 +25,10 @@
     gap: 15px;
 }
 
+.match-date-field {
+    font-size: 14px;
+}
+
 .match-detail-container {
     display: flex;
     gap: 5px;
